# serverless-kb-mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json  01-bug-report.md  02-feature-request.md  05-docs.md  AGENTS.md  CLAUDE.md  README.md  cdk.json  conftest.py  package.json  pipeline-config.json  tsconfig.json
.codex/: config.toml
ocr-service/: conftest.py  pyproject.toml  pytest.ini
ocr-service/docs/: README.md  README.zh-CN.md  aws-console-manual-deployment-overview-prep.md  deployment-config-single-source-of-truth.md  open-source-boundaries.md  open-source-ci-strategy.md  serverless_mcp_boundary_guide.md
ocr-service/examples/workflows/workflow_reference_only/: __init__.py  gemini_local_pipeline.py
ocr-service/infra/: .env.example
ocr-service/infra/cdk/lib/: pipeline-stack.ts
ocr-service/infra/cdk/lib/pipeline/: api.ts  helpers.ts  roles.ts
ocr-service/ocr-pipeline/: README.md  pyproject.toml
ocr-service/ocr-pipeline/src/awslabs/: __init__.py
ocr-service/ocr-pipeline/src/awslabs/mcp_lambda_handler/: __init__.py  mcp_lambda_handler.py
ocr-service/ocr-pipeline/src/serverless_mcp/domain/: embedding_schema.py  format_specs.py  manifest_schema.py  models.py  schema_errors.py
ocr-service/ocr-pipeline/tests/: conftest.py
ocr-service/ocr-pipeline/tests/integration/: paddleocr_result_urls_check.py  test_hosted_runner_storage_roundtrip.py
ocr-service/tools/ci/: validate_workflows.py
ocr-service/tools/packaging/serverless_mcp/: __init__.py  build_layer_artifacts.py  lambda_wrappers.py  layer_artifacts.py  list_lambda_artifacts.py  package_lambda.py
(+399 files in other folders)
