[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-mcp-service"
version = "0.1.0"
description = "Core backend service for the serverless OCR to S3 Vectors pipeline."
requires-python = ">=3.12"
dependencies = [
  "aws-lambda-powertools>=3.12.0",
  "aws-xray-sdk>=2.14.0",
  "boto3>=1.42.50",
  "cryptography>=45.0.0",
  "mangum>=0.19.0",
  "mcp>=1.12.0",
  "google-genai>=1.68.0",
  "markdown-it-py>=4.0.0",
  "PyYAML>=6.0.2",
  "openai>=2.2.0",
  "pydantic>=2.11.3",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "semchunk>=2.2.2",
  "tiktoken>=0.7.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "PyYAML>=6.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"serverless_mcp" = ["workflows/*.json"]
